<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:fresco="http://schemas.android.com/tools"
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imgAvatarDetail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            fresco:placeholderImage="@drawable/ic_launcher.background"
            fresco:roundedCornerRadius="5dp"
            fresco:roundBottomStart="false"
            fresco:roundBottomEnd="false"
            fresco:roundingBorderWidth="1dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/txtNameDetail"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp" android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatarDetail" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/txtDescriptionDetail"
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtNameDetail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_star"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txtStarDetail"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtDescriptionDetail"
    />
    <TextView
            android:id="@+id/txtStarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView7" app:layout_constraintVertical_bias="0.6"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_alarm"
            android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/txtForkDetail"
            app:layout_constraintBottom_toBottomOf="@+id/txtForkDetail"
            app:layout_constraintStart_toEndOf="@+id/txtForkDetail" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtUpdateDetail" app:layout_constraintVertical_bias="0.6"
    />
    <TextView
            android:text="@string/hour_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUpdateDetail"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.6"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_fork"
            android:id="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/txtStarDetail"
            app:layout_constraintBottom_toBottomOf="@+id/txtStarDetail"
            app:layout_constraintStart_toEndOf="@+id/txtStarDetail" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtForkDetail" app:layout_constraintVertical_bias="0.4"
    />
    <TextView
            android:text="@string/fork_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtForkDetail"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView6" app:layout_constraintVertical_bias="0.6"
    />
    <TextView
            android:text="@string/language"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:id="@+id/txtLanguageDetail"
            android:textStyle="bold|italic"
            android:gravity="center" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
