<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:fresco="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/coordinator">

    <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imgAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            fresco:placeholderImage="@drawable/ic_launcher.background"
            fresco:roundedCornerRadius="5dp"
            fresco:roundBottomStart="false"
            fresco:roundBottomEnd="false"
            fresco:roundingBorderWidth="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:textStyle="bold" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar" android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_star"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/txtStar" app:layout_constraintBottom_toBottomOf="@+id/txtStar"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar" app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintEnd_toStartOf="@+id/txtStar"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtStar"
            android:text="@string/star" android:textSize="10sp"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView3"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_alarm"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/txtUpdate" app:layout_constraintBottom_toBottomOf="@+id/txtUpdate"
            app:layout_constraintStart_toEndOf="@+id/txtFork" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtUpdate"/>
    <TextView
            android:text="@string/hour_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUpdate"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtName"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_fork"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/txtFork" app:layout_constraintBottom_toBottomOf="@+id/txtFork"
            app:layout_constraintStart_toEndOf="@+id/txtStar" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtFork"/>
    <TextView
            android:text="@string/fork_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFork"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView2" android:textSize="10sp"/>
    <TextView
            android:text="@string/language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtLanguage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imgAvatar"
            android:layout_marginStart="8dp" android:textStyle="italic" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>